--- a/PROJETO/BACKEND/money-api/src/main/resources/application.properties
+++ b/PROJETO/BACKEND/money-api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/moneyapi?createDatabaseIfNotExist=true&userSSL=false?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show.sql=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.date-format=yyyy-MM-dd
